5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1716_2505.log
== TEST (2019-05-14 16:44:11) 
-- CODE:
from math import*

x = eval(input("Valor de x:" ))
k = int(input("Valor de k: "))

contador = 1
sinal = -1
resultado = x
expoente = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** expoente / factorial (expoente)))
	sinal = sinal * -1
	exp = exp + 2
	contador += 1
print(round(resultado, 10))
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while( cont < k ):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:44:13) 
-- CODE:
from math import*

x = eval(input("Valor de x:" ))
k = int(input("Valor de k: "))

contador = 1
sinal = -1
resultado = x
expoente = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** expoente / factorial (expoente)))
	sinal = sinal * -1
	exp = exp + 2
	contador += 1
print(round(resultado, 10))
	
	
	
	
	
	
-- EXECUTION TIME:
0.12656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 11, in <module>
    while( cont < k ):
NameError: name 'cont' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:44:15) 
-- CODE:
from math import*

x = eval(input("Valor de x:" ))
k = int(input("Valor de k: "))

contador = 1
sinal = -1
resultado = x
expoente = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** expoente / factorial (expoente)))
	sinal = sinal * -1
	exp = exp + 2
	contador += 1
print(round(resultado, 10))
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    while( cont < k ):
NameError: name 'cont' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:44:23) 
-- CODE:
from math import*
x = eval(input("Valor de x:" ))
k = int(input("Valor de k: "))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))
	
	
	
	
	
	
	
	
	
	
	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:44:37) 
-- CODE:
from math import*
x = eval(input("Valor de x:" ))
k = int(input("Valor de k: "))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))
	
	
	
	
	
	
	
	
	
	
	
-- EXECUTION TIME:
0.153362
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
